# soulra

./: .env.example  .gitignore  README.md  package-lock.json  package.json  proxy.ts
soulra-backend/: .env.example  .gitignore  Dockerfile  Makefile  SMOKE_TEST.md  docker-compose.yml  pyproject.toml
soulra-backend/migrations/: env.py
soulra-backend/migrations/versions/: 0001_initial.py  0002_traditions.py  0003_practice_daily.py  0004_journal.py  0005_journal_personal_note.py  0006_users_auth.py  0007_token_usage_log_conversation_id_index.py  0008_traditions_per_user.py
soulra-backend/soulra/: celery_app.py  config.py  database.py  dependencies.py  main.py
soulra-backend/soulra/api/: websocket.py
soulra-backend/soulra/core/: auth.py  exceptions.py  logging.py  middleware.py
soulra-backend/soulra/graph/: builder.py  edges.py  state.py
soulra-backend/soulra/models/: conversation.py  ingest_job.py  journal.py  practice.py  tradition.py  tradition_card.py  user.py
soulra-backend/soulra/schemas/: conversation.py  ingest.py  journal.py  passage.py  practice.py  responses.py  tradition.py  user.py  websocket.py
soulra-backend/soulra/services/: cache.py  practice_builder.py  token_usage.py
soulra-backend/soulra/tasks/: ingest.py
soulra-backend/tests/: conftest.py
soulra-backend/tests/integration/: test_admin_api.py  test_conversations_api.py  test_health_api.py  test_ingest_api.py  test_me_api.py  test_passages_api.py  test_scoping.py  test_traditions_api.py  test_webhooks_api.py  test_ws_chat.py
soulra-backend/tests/unit/: test_auth.py  test_chunker.py  (+15 more)
(+154 files in other folders)
