[project]
name = "soulra-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "langchain>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-openai>=0.2",
    "langchain-postgres>=0.0.9",
    "langgraph>=1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "pypdf>=4.0",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "anyio>=4.0",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["soulra*"]

[tool.ruff]
line-length = 100
